fix z-index for menu to appear in full screen composer

--- a/app/assets/stylesheets/common/components/d-autocomplete.scss
+++ b/app/assets/stylesheets/common/components/d-autocomplete.scss
@@ -1,7 +1,7 @@
 @use "lib/viewport";
 
 .fk-d-menu[data-identifier="d-autocomplete"] {
-  z-index: z("composer", "dropdown") + 1;
+  z-index: z("modal", "dialog") + 1;
   --d-border-radius: var(--space-2);
 }
 
